--- a/src/templates/notesTemplate.html
+++ b/src/templates/notesTemplate.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <h1>{{title}}</h1>
+    <h1>{{subjectName}}</h1>
     <h2>({{subjectCode}})</h2>
     <div class="section">
         <h2>NOTE: It is more interactive to study these on <a href="https://www.easycsit.com">easyCSIT</a></h2>
